# cross-exchange-arbitrage

./: .gitignore  CONFIGURATION_GUIDE.md  Cargo.toml  GIT_SETUP.md  LIVE_DATA_SETUP.md  PROJECT_FINAL_SUMMARY.md  PROJECT_SUMMARY.md  PUSH_INSTRUCTIONS.md  README.md  USAGE_EXAMPLES.md  VALIDATION_REPORT.md  env.example  push_to_remote.sh
docs/: TDD_DEVELOPMENT_PLAN.md
examples/: continuous_dry_run.rs  dry_run_example.rs  futures_arbitrage_scanner.rs  futures_demo.rs  live_market_data_scanner.rs  live_trading_example.rs  real_data_arbitrage.rs  simple_continuous_test.rs  strategy_demo.rs
src/: lib.rs  main.rs
src/config/: mod.rs  settings.rs
src/connectors/: binance.rs  binance_futures.rs  bybit.rs  bybit_futures.rs  futures.rs  mod.rs  traits.rs
src/strategy/: arbitrage.rs  futures_arbitrage.rs  mod.rs
src/trading/: dry_run.rs  live_trading.rs  mod.rs
src/utils/: logger.rs  mod.rs
tests/integration/: mod.rs  test_data_connectors.rs  test_dry_run_executor.rs  test_live_trading_executor.rs  test_strategy_validation.rs
