[package]
name = "cross-exchange-arbitrage"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Cross-exchange arbitrage strategy using HFTBacktest framework"
license = "MIT"
repository = "https://github.com/yourusername/cross-exchange-arbitrage"

[dependencies]
# HFTBacktest framework (temporarily disabled due to rustc version requirement)
# hftbacktest = { path = "../hftbacktest/hftbacktest" }

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
async-trait = "0.1"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.14"

# HTTP client for REST APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.4"

# Cryptography for API authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Numerical computations
rust_decimal = { version = "1.32", features = ["serde-float"] }
statrs = "0.16"

# Data structures
dashmap = "5.5"
indexmap = "2.0"

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Environment variables
dotenv = "0.15"

# UUID generation
uuid = { version = "1.5", features = ["v4", "serde"] }

# Random number generation
rand = "0.8"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
mockall = "0.11"
wiremock = "0.5"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["live-trading"]
live-trading = []
dry-run-only = []

[[bin]]
name = "arbitrage"
path = "src/main.rs"

[[example]]
name = "dry_run_example"
path = "examples/dry_run_example.rs"

[[example]]
name = "live_trading_example"
path = "examples/live_trading_example.rs"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 1
debug = true

# Benchmarks will be added later
# [[bench]]
# name = "strategy_benchmarks"
# harness = false
